web-infras/parser/tests/fixtures/babel/es2015/uncategorised/245/output.txt
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,16)
1|"use strict"; (eval, a) => 42
 |              ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,16)
1|"use strict"; (eval, a) => 42
 |              ^
